# assistant-demo

./: .env.example  .gitignore  config.py  readme.md
ansible/: inventory.ini  playbook.example.yml  readme.md
ansible/roles/backend/tasks/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/frontend/tasks/: main.yml
ansible/roles/nginx/tasks/: main.yaml
ansible/templates/: .env.j2
assistant-backend/: pyproject.toml  requirements.txt
assistant-backend/src/api/: endpoints.py
assistant-backend/src/services/: ai_service.py
assistant-frontend/: README.md  angular.json  package-lock.json  package.json
assistant-frontend/src/: index.html  main.ts
assistant-frontend/src/app/: app.component.spec.ts  app.component.ts
assistant-frontend/src/app/chat/: chat.component.css  chat.component.html  chat.component.ts
src/: main.py
src/api/: endpoints.py
src/services/: fuzzy_answer_service.py
