[tool.poetry]
name = "ai-assistaint-demo"
version = "0.1.0"
description = ""
authors = ["Evgenii Stepanchenko <pobugi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
openai = "^1.59.4"
python-dotenv = "^1.0.1"
rapidfuzz = "^3.11.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
